--- a/pom.xml
+++ b/pom.xml
@@ -80,11 +80,11 @@
             <artifactId>webjars-locator</artifactId>
             <version>0.46</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
