--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,17 @@
 spring.application.name=guarderia
 server.port = 8080
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+spring.datasource.url=jdbc:mysql://localhost:3306/guarderia?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=usuario_proyecto
+spring.datasource.password=Usuar1o_Clave.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#Esta configuracion determina el formato de la fecha de la consola
+logging.pattern.dateformat= hh:mm:ss
+
+#Para remover el banner de spring de la consola
+spring.main.banner-mode=off
+
+#Para deshabilitar el cache en el servidor para desarrollo
+spring.thymeleaf.cache=false
